--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,21 +11,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.adamchodera.randomuser.activities.SplashActivity">
 
-    <pl.adamchodera.randomuser.views.CustomRingProgressBar
+    <pl.adamchodera.randomuser.views.StyledProgressBar
         android:id="@+id/id_activity_splash_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        app:max="100"
-        android:layout_marginBottom="@dimen/margin_big"
-        app:ringColor="@color/colorPrimary"
-        app:ringProgressColor="@color/colorPrimaryDark"
-        app:ringWidth="5dp"
-        app:style="FILL"
-        app:textColor="@color/colorPrimary"
-        app:textIsShow="true"
-        app:textSize="16sp" />
-
+        android:layout_marginBottom="@dimen/margin_big" />
 
 </RelativeLayout>
