--- a/app/src/main/res/layout/item_fragment_users_list.xml
+++ b/app/src/main/res/layout/item_fragment_users_list.xml
@@ -1,53 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginLeft="@dimen/margin_medium"
-    android:layout_marginRight="@dimen/margin_medium"
-    android:layout_marginTop="@dimen/margin_medium"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="@dimen/margin_small">
+    android:layout_marginLeft="@dimen/margin_small"
+    android:layout_marginRight="@dimen/margin_small"
+    card_view:cardCornerRadius="@dimen/margin_medium"
+    card_view:contentPadding="@dimen/margin_medium"
+    card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:paddingBottom="@dimen/margin_medium"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/id_item_user_photo"
+            android:layout_width="@dimen/item_fragment_users_list_image_width"
+            android:layout_height="@dimen/item_fragment_users_list_image_height"
             android:layout_margin="@dimen/margin_medium"
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            card_view:srcCompat="@mipmap/ic_launcher" />
+            card_view:srcCompat="@mipmap/ic_launcher"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+
+        <TextView
+            android:id="@+id/id_item_user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="@dimen/margin_small"
             android:layout_toRightOf="@+id/id_item_user_photo"
-            android:layout_alignBottom="@+id/id_item_user_photo"
-            android:layout_alignParentRight="true"
+            android:layout_toEndOf="@+id/id_item_user_photo"
+            android:layout_marginLeft="@dimen/margin_medium"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="#de000000"
+            android:textStyle="bold"
+            tools:text="User Name"/>
+
+        <TextView
+            android:id="@+id/id_item_user_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/id_item_user_name"
+            android:layout_marginLeft="@dimen/margin_medium"
+            android:layout_toRightOf="@+id/id_item_user_photo"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="#7a000000"
+            android:textSize="14sp"
+            tools:text="email"/>
+
+        <TextView
+            android:id="@+id/id_item_user_registration_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/id_item_user_photo">
-
-            <TextView
-                android:id="@+id/id_item_user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_standard"
-                android:textAppearance="?attr/textAppearanceListItem" />
-
-            <TextView
-                android:id="@+id/id_item_user_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_standard"
-                android:layout_marginLeft="@dimen/margin_standard"
-                android:textAppearance="?attr/textAppearanceListItem" />
-        </LinearLayout>
-
+            android:layout_alignParentRight="true"
+            android:padding="@dimen/margin_medium"
+            tools:text="date"/>
     </RelativeLayout>
-
 </android.support.v7.widget.CardView>
