--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,9 +9,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="pl.adamchodera.randomuser.activities.SplashActivity">
+    tools:context="pl.adamchodera.randomuser.feature.SplashActivity">
 
-    <pl.adamchodera.randomuser.views.StyledProgressBar
+    <pl.adamchodera.randomuser.common.view.StyledProgressBar
         android:id="@+id/id_activity_splash_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
