--- a/app/src/main/res/layout/fragment_users_list.xml
+++ b/app/src/main/res/layout/fragment_users_list.xml
@@ -5,5 +5,5 @@
     android:id="@+id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.adamchodera.randomuser.fragments.UsersListFragment"
+    tools:context=".feature.userslist.fragment.UsersListFragment"
     tools:listitem="@layout/item_fragment_users_list"/>
