--- a/app/src/main/res/layout/activity_users_list.xml
+++ b/app/src/main/res/layout/activity_users_list.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="pl.adamchodera.randomuser.feature.details.userslist.MainActivity">
+    android:layout_height="match_parent">
 
     <fragment
         android:name="pl.adamchodera.randomuser.feature.userslist.fragment.UsersListFragment"
