--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -8,14 +8,14 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/id_activity_user_details_app_bar"
+        android:id="@+id/id_fragment_user_details_app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/id_activity_user_details_toolbar_layout"
+            android:id="@+id/id_fragment_user_details_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -26,16 +26,16 @@
             tools:background="@drawable/ic_error">
 
             <ImageView
-                android:id="@+id/id_activity_user_details_image"
+                android:id="@+id/id_fragment_user_details_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/id_activity_user_details_image_margin_bottom"
+                android:layout_marginBottom="@dimen/activity_user_details_image_margin_bottom"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/id_activity_user_details_toolbar"
+                android:id="@+id/id_fragment_user_details_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="top|bottom"
@@ -44,7 +44,7 @@
             </android.support.v7.widget.Toolbar>
 
             <TextView
-                android:id="@+id/id_activity_user_details_email"
+                android:id="@+id/id_fragment_user_details_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -55,16 +55,20 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include
-        android:id="@+id/id_activity_user_details_content"
-        layout="@layout/content_user_details"/>
+    <pl.adamchodera.randomuser.feature.details.view.SectionView
+        android:id="@+id/id_fragment_user_details_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".feature.details.UserDetailsActivity"
+        tools:showIn="@layout/fragment_user_details"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/id_activity_user_details_fab_button"
+        android:id="@+id/id_fragment_user_details_fab_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/id_activity_user_details_content"
+        app:layout_anchor="@id/id_fragment_user_details_content"
         app:layout_anchorGravity="top|end"
         app:srcCompat="@android:drawable/ic_dialog_email"/>
 
