Minor improvements in UI

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,7 @@
     <dimen name="margin_standard">16dp</dimen>
     <dimen name="margin_medium">8dp</dimen>
     <dimen name="margin_small">4dp</dimen>
-    <dimen name="app_bar_height">360dp</dimen>
+    <dimen name="app_bar_height">250dp</dimen>
     <dimen name="toolbar_default_height">48dp</dimen>
     <dimen name="activity_user_details_image_margin_bottom">56dp</dimen>
     <dimen name="activity_user_details_email_padding_left_expanded">34dp</dimen>
@@ -17,5 +17,6 @@
     <dimen name="item_fragment_users_list_image_width">100dp</dimen>
     <dimen name="view_user_details_section_item_min_height">72dp</dimen>
     <dimen name="view_user_details_section_item_padding_top">20dp</dimen>
+    <dimen name="card_view_padding_bottom">24dp</dimen>
 
 </resources>
