--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -30,9 +30,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/activity_user_details_image_margin_bottom"
-                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"/>
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax"
+                android:contentDescription="@string/accessibility_fragment_user_details_image"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/id_fragment_user_details_toolbar"
@@ -60,7 +61,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".feature.details.UserDetailsActivity"
         tools:showIn="@layout/fragment_user_details"/>
 
     <android.support.design.widget.FloatingActionButton
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/id_fragment_user_details_content"
-        app:layout_anchorGravity="top|end"
+        app:layout_anchorGravity="end"
         app:srcCompat="@android:drawable/ic_dialog_email"/>
 
 </android.support.design.widget.CoordinatorLayout>
