--- a/app/src/main/res/layout/item_fragment_users_list.xml
+++ b/app/src/main/res/layout/item_fragment_users_list.xml
@@ -10,31 +10,29 @@
     android:layout_marginLeft="@dimen/margin_small"
     android:layout_marginRight="@dimen/margin_small"
     card_view:cardCornerRadius="@dimen/margin_medium"
-    card_view:contentPadding="@dimen/margin_medium"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true"
+    card_view:contentPadding="@dimen/margin_standard"
+    card_view:contentPaddingBottom="@dimen/card_view_padding_bottom">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:paddingBottom="@dimen/margin_medium"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/id_item_user_photo"
             android:layout_width="@dimen/item_fragment_users_list_image_width"
             android:layout_height="@dimen/item_fragment_users_list_image_height"
-            android:layout_margin="@dimen/margin_medium"
             card_view:srcCompat="@mipmap/ic_launcher"/>
-
 
         <TextView
             android:id="@+id/id_item_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_marginBottom="@dimen/margin_small"
-            android:layout_toRightOf="@+id/id_item_user_photo"
+            android:layout_marginLeft="@dimen/margin_standard"
+            android:layout_marginStart="@dimen/margin_standard"
             android:layout_toEndOf="@+id/id_item_user_photo"
-            android:layout_marginLeft="@dimen/margin_medium"
+            android:layout_toRightOf="@+id/id_item_user_photo"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="#de000000"
             android:textStyle="bold"
@@ -45,7 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/id_item_user_name"
-            android:layout_marginLeft="@dimen/margin_medium"
+            android:layout_marginLeft="@dimen/margin_standard"
+            android:layout_marginStart="@dimen/margin_standard"
+            android:layout_toEndOf="@+id/id_item_user_photo"
             android:layout_toRightOf="@+id/id_item_user_photo"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="#7a000000"
@@ -59,7 +59,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:padding="@dimen/margin_medium"
             tools:text="date"/>
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
