--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/id_fragment_user_details_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -19,21 +20,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            android:transitionName="@string/transition_name_user_name"
             app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleTextAppearance="@style/ExpandedAppBar"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            tools:background="@drawable/ic_error">
+            tools:background="@drawable/ic_error"
+            tools:targetApi="lollipop">
 
             <ImageView
                 android:id="@+id/id_fragment_user_details_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/activity_user_details_image_margin_bottom"
-                android:scaleType="centerCrop"
+                android:contentDescription="@string/accessibility_fragment_user_details_image"
                 android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                android:transitionName="@string/transition_name_user_photo"
                 app:layout_collapseMode="parallax"
-                android:contentDescription="@string/accessibility_fragment_user_details_image"/>
+                tools:targetApi="lollipop"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/id_fragment_user_details_toolbar"
@@ -50,7 +55,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:gravity="left"
+                android:transitionName="@string/transition_name_user_email"
                 app:layout_collapseMode="pin"
+                tools:targetApi="lollipop"
                 tools:text="email"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
