Reveal email when toolbar collapsed or expanded

--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -49,7 +49,7 @@
                 app:layout_collapseMode="pin">
             </android.support.v7.widget.Toolbar>
 
-            <TextView
+            <pl.adamchodera.randomuser.feature.details.view.EmailView
                 android:id="@+id/id_fragment_user_details_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
