--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
     <dimen name="margin_small">4dp</dimen>
     <dimen name="app_bar_height">250dp</dimen>
     <dimen name="toolbar_default_height">48dp</dimen>
-    <dimen name="activity_user_details_image_margin_bottom">56dp</dimen>
+    <dimen name="fragment_user_details_image_margin_bottom">56dp</dimen>
     <dimen name="activity_user_details_email_padding_left_expanded">34dp</dimen>
     <dimen name="activity_user_details_email_padding_left_collapsed">75dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
@@ -20,5 +20,7 @@
     <dimen name="card_view_padding_bottom">24dp</dimen>
     <dimen name="text_size_standard">16sp</dimen>
     <dimen name="text_size_big">20sp</dimen>
+    <dimen name="text_size_medium">14sp</dimen>
+    <dimen name="text_size_small">12sp</dimen>
 
 </resources>
