--- a/app/src/main/res/layout/view_user_details_section_item_view.xml
+++ b/app/src/main/res/layout/view_user_details_section_item_view.xml
@@ -13,15 +13,14 @@
 
     <TextView
         android:id="@+id/id_view_user_details_section_item_view_title"
+        style="@style/TitleTextStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/id_view_user_details_section_item_view_value"
+        style="@style/SubtitleTextStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
