--- a/app/src/main/res/layout/view_user_details_section_view.xml
+++ b/app/src/main/res/layout/view_user_details_section_view.xml
@@ -5,21 +5,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <pl.adamchodera.randomuser.feature.details.view.SectionItemView
+    <pl.adamchodera.randomuser.feature.userdetails.view.SectionItemView
         android:id="@+id/id_view_user_details_section_view_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <include layout="@layout/view_divider"/>
 
-    <pl.adamchodera.randomuser.feature.details.view.SectionItemView
+    <pl.adamchodera.randomuser.feature.userdetails.view.SectionItemView
         android:id="@+id/id_view_user_details_section_view_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <include layout="@layout/view_divider"/>
 
-    <pl.adamchodera.randomuser.feature.details.view.SectionItemView
+    <pl.adamchodera.randomuser.feature.userdetails.view.SectionItemView
         android:id="@+id/id_view_user_details_section_view_registration_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
