--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Base application theme. -->
+    <!-- App themes -->
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowContentTransitions" tools:targetApi="lollipop">true</item>
-    </style>
-
-    <style name="SplashScreenTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -22,7 +18,41 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:subtitle">test</item>
+    </style>
 
+
+    <!-- Splash screen theme -->
+
+    <style name="SplashScreenTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+
+
+    <!-- Text Styles -->
+
+    <style name="StandardTextStyle" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textStyle">normal</item>
+        <item name="android:fontFamily" tools:targetApi="jelly_bean">sans-serif</item>
+    </style>
+
+    <style name="TitleTextStyle" parent="StandardTextStyle">
+        <item name="android:textColor">@color/text_color_title</item>
+        <item name="android:textSize">@dimen/text_size_standard</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SubtitleTextStyle" parent="StandardTextStyle">
+        <item name="android:textColor">@color/text_color_subtitle</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
+    </style>
+
+    <style name="UserNameTextStyle" parent="StandardTextStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:transitionName" tools:targetApi="lollipop">@string/transition_name_user_name</item>
+    </style>
+
+    <style name="UserEmailTextStyle" parent="StandardTextStyle">
+        <item name="android:transitionName" tools:targetApi="lollipop">@string/transition_name_user_email</item>
     </style>
 
     <style name="ExpandedAppBar" parent="@android:style/TextAppearance.Medium">
