--- a/app/src/main/res/layout/view_user_details_section_item_view.xml
+++ b/app/src/main/res/layout/view_user_details_section_item_view.xml
@@ -13,13 +13,13 @@
 
     <TextView
         android:id="@+id/id_view_user_details_section_item_view_title"
-        style="@style/TitleTextStyle"
+        style="@style/SectionItemTitleStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/id_view_user_details_section_item_view_value"
-        style="@style/SubtitleTextStyle"
+        style="@style/SectionItemValueStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
