--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,14 +35,14 @@
         <item name="android:fontFamily" tools:targetApi="jelly_bean">sans-serif</item>
     </style>
 
-    <style name="TitleTextStyle" parent="StandardTextStyle">
-        <item name="android:textColor">@color/text_color_title</item>
+    <style name="SectionItemTitleStyle" parent="StandardTextStyle">
+        <item name="android:textColor">@color/text_color_grey</item>
         <item name="android:textSize">@dimen/text_size_standard</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="SubtitleTextStyle" parent="StandardTextStyle">
-        <item name="android:textColor">@color/text_color_subtitle</item>
+    <style name="SectionItemValueStyle" parent="StandardTextStyle">
+        <item name="android:textColor">@color/text_color_grey</item>
         <item name="android:textSize">@dimen/text_size_medium</item>
     </style>
 
