--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/fragment_user_details_image_margin_bottom"
-                android:contentDescription="@string/accessibility_fragment_user_details_image"
+                android:contentDescription="@string/accessibility_user_photo"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:transitionName="@string/transition_name_user_photo"
@@ -73,7 +73,7 @@
         android:id="@+id/id_fragment_user_details_fab_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_margin="@dimen/margin_standard"
         app:layout_anchor="@id/id_fragment_user_details_content"
         app:layout_anchorGravity="end"
         app:srcCompat="@android:drawable/ic_dialog_email"/>
