--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_splash"
@@ -19,4 +19,4 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/margin_big" />
 
-</RelativeLayout>
+</FrameLayout>
